--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "description": "Info Perawatan dan Tips Kesehatan, Beasiswa Pendidikan, Lowongan Kerja 2019, Resep Masakan Kuliner, Tempat Wisata, Kutipan Puisi Inspirasi, Motivasi",
   "start_url": "http://www.bacalagi.id",
   "display": "standalone",
-  "theme_color": "#029AE4",
+  "theme_color": "#ea3a7e",
   "icons": [
     {
       "src": "https://2.bp.blogspot.com/-J3GkYk9Q3O4/XH4sn1BzodI/AAAAAAAAQ1c/LC8CNBnhz0Y-9cnL4PPICXh0lFnQmfgbwCLcBGAs/s1600/BacalagiLogo32.png",
